--- a/src/app/shared/components/market-history-price-chart/market-history-price-chart.component.html
+++ b/src/app/shared/components/market-history-price-chart/market-history-price-chart.component.html
@@ -5,7 +5,8 @@
              [tooltip]='tooltip' (load)='load($event)' [chartArea]='chartArea' [width]='width' [legendSettings]='legend'
              [zoomSettings]='zoom'>
     <e-series-collection>
-      <e-series [dataSource]='data' type='Line' xName='timestamp' yName='price' name='Price' width=2 [marker]='diamondMarker' opacity=1></e-series>
+      <e-series [dataSource]='data' type='Line' xName='timestamp' yName='price' name='Price' width=2
+                [marker]='diamondMarker' opacity=1></e-series>
     </e-series-collection>
   </ejs-chart>
 </div>
